generated/GrammarParser.py
# Generated from Grammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'<'", "'<='", "'/'", "'*'", "'true'", 
                     "'false'", "'('", "')'", "'{'", "'}'", "';'", "'+'", 
                     "'-'", "'<-'", "'~'", "':'", "','", "'.'", "'@'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'(*'", "'*)'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "INHERITS", "STRING", "INTEGER", 
                      "IF", "FI", "ELSE", "WHILE", "LOOP", "POOL", "LET", 
                      "IN", "THEN", "NEW", "ISVOID", "NOT", "EQUALS", "BIGGER", 
                      "BIGGEREQUALS", "DIVIDE", "TIMES", "TRUE", "FALSE", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "SEMICOLON", 
                      "PLUS", "MINUS", "ASSIGN", "TILDE", "COLON", "COMMA", 
                      "DOT", "AT", "ID", "TYPE", "WS", "LINE_COMMENT", "INIT_COMMENT", 
                      "FINISH_COMMENT", "COMMENT" ]

    RULE_r = 0
    RULE_program = 1
    RULE_classDef = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_formalAssign = 5
    RULE_expr = 6

    ruleNames =  [ "r", "program", "classDef", "feature", "formal", "formalAssign", 
                   "expr" ]

    EOF = Token.EOF
    CLASS=1
    INHERITS=2
    STRING=3
    INTEGER=4
    IF=5
    FI=6
    ELSE=7
    WHILE=8
    LOOP=9
    POOL=10
    LET=11
    IN=12
    THEN=13
    NEW=14
    ISVOID=15
    NOT=16
    EQUALS=17
    BIGGER=18
    BIGGEREQUALS=19
    DIVIDE=20
    TIMES=21
    TRUE=22
    FALSE=23
    LPAREN=24
    RPAREN=25
    LBRACKET=26
    RBRACKET=27
    SEMICOLON=28
    PLUS=29
    MINUS=30
    ASSIGN=31
    TILDE=32
    COLON=33
    COMMA=34
    DOT=35
    AT=36
    ID=37
    TYPE=38
    WS=39
    LINE_COMMENT=40
    INIT_COMMENT=41
    FINISH_COMMENT=42
    COMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(GrammarParser.ProgramContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitR" ):
                return visitor.visitR(self)
            else:
                return visitor.visitChildren(self)




    def r(self):

        localctx = GrammarParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ClassDefContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.SEMICOLON)
            else:
                return self.getToken(GrammarParser.SEMICOLON, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 16
                self.classDef()
                self.state = 17
                self.match(GrammarParser.SEMICOLON)
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrammarParser.RULE_classDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CLASS_DEFINITIONContext(ClassDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ClassDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CLASS(self):
            return self.getToken(GrammarParser.CLASS, 0)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.TYPE)
            else:
                return self.getToken(GrammarParser.TYPE, i)
        def LBRACKET(self):
            return self.getToken(GrammarParser.LBRACKET, 0)
        def RBRACKET(self):
            return self.getToken(GrammarParser.RBRACKET, 0)
        def INHERITS(self):
            return self.getToken(GrammarParser.INHERITS, 0)
        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.FeatureContext)
            else:
                return self.getTypedRuleContext(GrammarParser.FeatureContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.SEMICOLON)
            else:
                return self.getToken(GrammarParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCLASS_DEFINITION" ):
                listener.enterCLASS_DEFINITION(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCLASS_DEFINITION" ):
                listener.exitCLASS_DEFINITION(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCLASS_DEFINITION" ):
                return visitor.visitCLASS_DEFINITION(self)
            else:
                return visitor.visitChildren(self)



    def classDef(self):

        localctx = GrammarParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            localctx = GrammarParser.CLASS_DEFINITIONContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(GrammarParser.CLASS)
            self.state = 24
            self.match(GrammarParser.TYPE)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 25
                self.match(GrammarParser.INHERITS)
                self.state = 26
                self.match(GrammarParser.TYPE)


            self.state = 29
            self.match(GrammarParser.LBRACKET)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 30
                self.feature()
                self.state = 31
                self.match(GrammarParser.SEMICOLON)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(GrammarParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrammarParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DEFINITION_METHOD_PARAMSContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)
        def LPAREN(self):
            return self.getToken(GrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(GrammarParser.RPAREN, 0)
        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)
        def TYPE(self):
            return self.getToken(GrammarParser.TYPE, 0)
        def LBRACKET(self):
            return self.getToken(GrammarParser.LBRACKET, 0)
        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)

        def RBRACKET(self):
            return self.getToken(GrammarParser.RBRACKET, 0)
        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.FormalContext)
            else:
                return self.getTypedRuleContext(GrammarParser.FormalContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COMMA)
            else:
                return self.getToken(GrammarParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEFINITION_METHOD_PARAMS" ):
                listener.enterDEFINITION_METHOD_PARAMS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEFINITION_METHOD_PARAMS" ):
                listener.exitDEFINITION_METHOD_PARAMS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEFINITION_METHOD_PARAMS" ):
                return visitor.visitDEFINITION_METHOD_PARAMS(self)
            else:
                return visitor.visitChildren(self)


    class DEFINITION_PARAMSContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)
        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)
        def TYPE(self):
            return self.getToken(GrammarParser.TYPE, 0)
        def ASSIGN(self):
            return self.getToken(GrammarParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEFINITION_PARAMS" ):
                listener.enterDEFINITION_PARAMS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEFINITION_PARAMS" ):
                listener.exitDEFINITION_PARAMS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEFINITION_PARAMS" ):
                return visitor.visitDEFINITION_PARAMS(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = GrammarParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = GrammarParser.DEFINITION_METHOD_PARAMSContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(GrammarParser.ID)
                self.state = 41
                self.match(GrammarParser.LPAREN)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==37:
                    self.state = 42
                    self.formal()
                    self.state = 47
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==34:
                        self.state = 43
                        self.match(GrammarParser.COMMA)
                        self.state = 44
                        self.formal()
                        self.state = 49
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 52
                self.match(GrammarParser.RPAREN)
                self.state = 53
                self.match(GrammarParser.COLON)
                self.state = 54
                self.match(GrammarParser.TYPE)
                self.state = 55
                self.match(GrammarParser.LBRACKET)
                self.state = 56
                self.expr(0)
                self.state = 57
                self.match(GrammarParser.RBRACKET)
                pass

            elif la_ == 2:
                localctx = GrammarParser.DEFINITION_PARAMSContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(GrammarParser.ID)
                self.state = 60
                self.match(GrammarParser.COLON)
                self.state = 61
                self.match(GrammarParser.TYPE)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==31:
                    self.state = 62
                    self.match(GrammarParser.ASSIGN)
                    self.state = 63
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)

        def TYPE(self):
            return self.getToken(GrammarParser.TYPE, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = GrammarParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(GrammarParser.ID)
            self.state = 69
            self.match(GrammarParser.COLON)
            self.state = 70
            self.match(GrammarParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def COLON(self):
            return self.getToken(GrammarParser.COLON, 0)

        def TYPE(self):
            return self.getToken(GrammarParser.TYPE, 0)

        def ASSIGN(self):
            return self.getToken(GrammarParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_formalAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalAssign" ):
                listener.enterFormalAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalAssign" ):
                listener.exitFormalAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalAssign" ):
                return visitor.visitFormalAssign(self)
            else:
                return visitor.visitChildren(self)




    def formalAssign(self):

        localctx = GrammarParser.FormalAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formalAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(GrammarParser.ID)
            self.state = 73
            self.match(GrammarParser.COLON)
            self.state = 74
            self.match(GrammarParser.TYPE)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 75
                self.match(GrammarParser.ASSIGN)
                self.state = 76
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrammarParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CALLContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)
        def LPAREN(self):
            return self.getToken(GrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(GrammarParser.RPAREN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COMMA)
            else:
                return self.getToken(GrammarParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCALL" ):
                listener.enterCALL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCALL" ):
                listener.exitCALL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCALL" ):
                return visitor.visitCALL(self)
            else:
                return visitor.visitChildren(self)


    class EXPR_PARAMSContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(GrammarParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(GrammarParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEXPR_PARAMS" ):
                listener.enterEXPR_PARAMS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEXPR_PARAMS" ):
                listener.exitEXPR_PARAMS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEXPR_PARAMS" ):
                return visitor.visitEXPR_PARAMS(self)
            else:
                return visitor.visitChildren(self)


    class TIMESContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def TIMES(self):
            return self.getToken(GrammarParser.TIMES, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTIMES" ):
                listener.enterTIMES(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTIMES" ):
                listener.exitTIMES(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTIMES" ):
                return visitor.visitTIMES(self)
            else:
                return visitor.visitChildren(self)


    class EQUALSContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def EQUALS(self):
            return self.getToken(GrammarParser.EQUALS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEQUALS" ):
                listener.enterEQUALS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEQUALS" ):
                listener.exitEQUALS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEQUALS" ):
                return visitor.visitEQUALS(self)
            else:
                return visitor.visitChildren(self)


    class VOID_EXPRContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(GrammarParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVOID_EXPR" ):
                listener.enterVOID_EXPR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVOID_EXPR" ):
                listener.exitVOID_EXPR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVOID_EXPR" ):
                return visitor.visitVOID_EXPR(self)
            else:
                return visitor.visitChildren(self)


    class DISPATCHContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def DOT(self):
            return self.getToken(GrammarParser.DOT, 0)
        def ID(self):
            return self.getToken(GrammarParser.ID, 0)
        def LPAREN(self):
            return self.getToken(GrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(GrammarParser.RPAREN, 0)
        def AT(self):
            return self.getToken(GrammarParser.AT, 0)
        def TYPE(self):
            return self.getToken(GrammarParser.TYPE, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COMMA)
            else:
                return self.getToken(GrammarParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDISPATCH" ):
                listener.enterDISPATCH(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDISPATCH" ):
                listener.exitDISPATCH(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDISPATCH" ):
                return visitor.visitDISPATCH(self)
            else:
                return visitor.visitChildren(self)


    class BLOCKContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACKET(self):
            return self.getToken(GrammarParser.LBRACKET, 0)
        def RBRACKET(self):
            return self.getToken(GrammarParser.RBRACKET, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.SEMICOLON)
            else:
                return self.getToken(GrammarParser.SEMICOLON, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBLOCK" ):
                listener.enterBLOCK(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBLOCK" ):
                listener.exitBLOCK(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBLOCK" ):
                return visitor.visitBLOCK(self)
            else:
                return visitor.visitChildren(self)


    class TRUEContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(GrammarParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTRUE" ):
                listener.enterTRUE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTRUE" ):
                listener.exitTRUE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTRUE" ):
                return visitor.visitTRUE(self)
            else:
                return visitor.visitChildren(self)


    class WHILE_CLAUSEContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(GrammarParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(GrammarParser.LOOP, 0)
        def POOL(self):
            return self.getToken(GrammarParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWHILE_CLAUSE" ):
                listener.enterWHILE_CLAUSE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWHILE_CLAUSE" ):
                listener.exitWHILE_CLAUSE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWHILE_CLAUSE" ):
                return visitor.visitWHILE_CLAUSE(self)
            else:
                return visitor.visitChildren(self)


    class SUMContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(GrammarParser.PLUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSUM" ):
                listener.enterSUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSUM" ):
                listener.exitSUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSUM" ):
                return visitor.visitSUM(self)
            else:
                return visitor.visitChildren(self)


    class LET_PASSContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(GrammarParser.LET, 0)
        def formalAssign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.FormalAssignContext)
            else:
                return self.getTypedRuleContext(GrammarParser.FormalAssignContext,i)

        def IN(self):
            return self.getToken(GrammarParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(GrammarParser.ExprContext,0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.COMMA)
            else:
                return self.getToken(GrammarParser.COMMA, i)
